synthv1 - an old-school polyphonic synthesizer
----------------------------------------------

ChangeLog

SVN TRUNK

- Fixed a nasty rather fundamental bug introduced by late
  voice list optimization, which was seriously crippling
  and noticeable on audio output when more than one LV2
  plug-ins were being instantiated.


0.1.0  2012-09-10  First true official release.

- Preset drop-down list is now sorted.
- Migrated to sourceforge.net.


0.0.9  2012-08-27  Post-vacation relax.

- Main widget now a plain basic QWidget, instead of QDialog.
- Preset salvage query check on main widget close (GUI).
- Voice list alloc/free optimization--doubled polyphony.


0.0.8  2012-07-15  Second coming consolidation.

- Proto-Icon, Desktop file and Help About menus added.


0.0.7  2012-07-07  Initial change-log entry.