@@ -5,6 +5,9 @@ ChangeLog
 
 SVN TRUNK
 
+- Fixed a crash bug on LV2 main widget close (GUI) due to
+  superfluous preset dirty checking.
+
 - Fixed a nasty rather fundamental bug introduced by late
   voice list optimization, which was seriously crippling
   and noticeable on audio output when more than one LV2
